Added: an interceptor to add cookies to the http calls; new navigation buttons to the register and login components. Adjusted some services to adapt to changes and updates of the backend. Updated is-authenticated guard accordingly.

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -40,3 +40,11 @@
     </button>
   </form>
 </div>
+<div class="nav-btns-container">
+  <button mat-flat-button class="nav-btn" routerLink="/landing-page">
+    Landing page
+  </button>
+  <button mat-flat-button class="nav-btn" routerLink="/register">
+    Register
+  </button>
+</div>
