--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -72,3 +72,9 @@
     </button>
   </form>
 </div>
+<div class="nav-btns-container">
+  <button mat-flat-button class="nav-btn" routerLink="/landing-page">
+    Landing page
+  </button>
+  <button mat-flat-button class="nav-btn" routerLink="/login">Login</button>
+</div>
