--- a/src/styles.scss
+++ b/src/styles.scss
@@ -141,6 +141,27 @@ body {
       color: $text-primary-color;
     }
   }
+  .note-content {
+    padding: 0.5rem;
+    h1,
+    h2,
+    h3,
+    h4 {
+      text-align: unset !important;
+    }
+    h1 {
+      font-size: 2em !important;
+    }
+    h2 {
+      font-size: 1.5em !important;
+    }
+    h3 {
+      font-size: 1.3em !important;
+    }
+    h4 {
+      font-size: 1em !important;
+    }
+  }
 }
 
 //responsive sizing
